[solar] fixed app title on mobile

--- a/solar/style/less/elements/general.less
+++ b/solar/style/less/elements/general.less
@@ -47,8 +47,15 @@
         .app-title, 
         .header-toolbar, 
         .app-listwrapper {
-            max-width: 66%;
+            max-width: 80%;
+            position: relative;
         }
+
+        .header-toolbar {
+            right: 0;
+        }
+
+        .app-listwrapper {display: none;}
     }
     
     .footer {
